# robocol_new_arm

./: CMakeLists.txt  README.md  package.xml
arm_description/: hand.urdf.xacro  hand.xacro  robocol_arm.urdf.xacro  robocol_arm.xacro  robocol_arm_WORKING.xacro  robocol_arm_hand.urdf.xacro
config/: fake_controllers.yaml  hand_LAST.xacro  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  partial_robocol_arm.xacro  robocol_arm.srdf.xacro  robocol_arm.xacro  robocol_arm_hand.srdf.xacro  robocol_controllers.yaml
doc/move_group_python_interface/scripts/: move_group_python_interface_tutorial.py
images/: img.MD
launch/: default_warehouse_db.launch  display.launch  fake_moveit_controller_manager.launch.xml  joystick_control.launch  move_group.launch  moveit.rviz  moveit_empty.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robocol_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
meshes/collision/: hand.stl  link0.stl  link0_2.stl  link1.stl  link2.stl
meshes/visual/: finger.stl  hand.stl  link3.stl  link4.stl  link5.stl
src/: armSim.py  arm_pos.py  auto.py  cam_t265_odom.py  fake_arm_mov.py  inverseKinem.cpp  listen_plan.py  mov2step.py  move_arm.py  move_group_python_interface_tutorial.py  pots_read_2_rads.py  realArm_Controller.py  resting_pose.py  simRealArm.py  step2disp.py
urdf/: robocol_arm.urdf
